force-app/main/default/objects/Mass_Action_Log__c/fields/Batch_Success_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Batch_Success_Percentage__c</fullName>
    <description>Calculates the success percentage of the batch job&apos;s executions.</description>
    <formula>IF(
  Processed_Batches__c &gt; 0,
  MAX( 0, Processed_Batches__c - Failed_Batches__c ) / Processed_Batches__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the success percentage of the batch job&apos;s executions.</inlineHelpText>
    <label>Batch Success %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>