force-app/main/default/objects/Mass_Action_Log__c/fields/Batch_Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Batch_Success_Rate__c</fullName>
    <description>Visualizes the batch success percentage in color. Uses https://shields.io to generage the image in real-time.</description>
    <formula>IMAGE(
  &apos;https://img.shields.io/static/v1.svg?label=&amp;message=&apos; &amp;
  TEXT( ROUND( Batch_Success_Percentage__c * 100, 0 ) )  &amp; &apos;%&apos; &amp;
  &apos;&amp;color=&apos; &amp;
  IF( Batch_Success_Percentage__c &gt;= 0.90, &apos;4CC620&apos;, /* brightgreen */
    IF( Batch_Success_Percentage__c &gt;= 0.80, &apos;4bca81&apos;, /* green */
      IF( Batch_Success_Percentage__c &gt;= 0.50, &apos;ffb75d&apos;, /* orange */
        &apos;d4504c&apos; /* red */
      )
    )
  ),
  TEXT( ROUND( Batch_Success_Percentage__c * 100, 0 ) ) &amp; &apos;%&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Visualizes the batch success percentage in color.</inlineHelpText>
    <label>Batch Success Rate</label>
    <type>Text</type>
</CustomField>